--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         >Github</a
       >
     </div>
-    <script src="api.js"></script>
+    <!-- <script src="api.js"></script> -->
     <script src="app.js"></script>
   </body>
 </html>
