--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Color Palette</title>
+    <title>Weather App | Navid Dev</title>
   </head>
   <body class="body">
     <section class="weather-app">
